@@ -9,3 +9,4 @@ es:
     action_two: Segunda acción
     actions:
       action_one: Primera acción
+      action_three: Tercera acción
